we need the original context that contains the data, fdo#85856

Conflicts:
	sc/source/core/data/documen2.cxx

Change-Id: I107201ab736b548f010d813540e0a9cec7402e79